--- a/main.css
+++ b/main.css
@@ -27,9 +27,7 @@ body{
    border-bottom-color:yellow; 
 }
 
-css comment
-
-*Create a new file called "main.css"
+/**Create a new file called "main.css"
 *Add a link element to the head of your index.html file
 *<link rel="stylesheet" href="main.css" type="text/css">
 *Edit the main.css file
@@ -41,4 +39,4 @@ css comment
 *Validate your main.css file.
 *Copy this list of requirements and paste it into your "main.css" file as a css comment. Put an asterisk in front of each one that you did.
 *Upload to the production server with sftp.
-*View your index.html in the production server.
+*View your index.html in the production server.*/
