--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ footer{
    border-color:purple;
 }
 body{
-   background-color:blue;
+   background-color:#a35623;
    border-bottom:double;
    border-bottom-width:thick;
    border-bottom-style:double;
